# SoonerRoverTeamV

./: .gitignore  LICENSE  README.md
Arduino/: README.md
Arduino/arm_controller/: arm_controller.ino
Arduino/arm_test/: arm_test.ino
Arduino/drill_controller/: drill_controller.ino
Arduino/drill_test/: drill_test.ino
Arduino/servo_test/: servo_test.ino
Arduino/wheel_controller/: wheel_controller.ino
Autonomous/: README.md  Test.txt  Test2.txt  autonomous.py  backup.py  config.ini  findFocalLength.py  location.py  main.py  runAutonomous.sh  setup.py  test.py  testDayChecklist.txt
Autonomous/YOLO/: imageCollector.py  train.ipynb
Autonomous/ardetector/: ARTracker.py  config.ini
Autonomous/examples/: ar.py  (+5 more)
Autonomous/gps/: CMakeLists.txt  Readme.md  SWIG instructions.txt  common.h  config.txt  edc.c  edc.i  edc.py  edc_wrap.c  gps.c  gps.h  gps.i  gps.py  gps_wrap.c  gpsmain.py  main.c  main.cpp  main.i  main_wrap.c  makefile  position.h  sbp.c  sbp.h  sbp.py  sbp_wrap.c  tcp_example2.c
Autonomous/gps/lib/: README.md  SWIG instructions.txt  gps.c  gps.cpp  gps.h  gps.hpp  gps2.cpp  gps2.hpp  main.c  makefile  sbp.i  tcp_example2.cpp
Autonomous/libs/: ARTracker.py  Drive.py  Location.py  Locationf9p.py  README.md  UDPOut.py  \  config.ini  pyproject.toml
Autonomous/libs/src/libs/: __init__.py
Discord/: README.md  bot.py  calendarUtil.py  config.ini  credentials.json  main.py  prompts.py  token.json
MBED/: README.md
Microcontrollers/: README.md
Mission Control/: Readme.md
MissionControl/: Readme.md
Testing/: config.ini  operate.py  operateWireless.py  util.py  utilWireless.py
(+254 files in other folders)
